--- a/FlightAppDeploy/pom.xml
+++ b/FlightAppDeploy/pom.xml
@@ -41,11 +41,13 @@
 			<version>2.2.6.RELEASE</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-jdbc</artifactId>
+</dependency>
 <dependency>
-    <groupId>org.postgresql</groupId>
-    <artifactId>postgresql</artifactId>
-    <version>9.4-1206-jdbc4</version>
+  <groupId>org.postgresql</groupId>
+  <artifactId>postgresql</artifactId>
 </dependency>
 
 
