--- a/FlightAppDeploy/src/main/resources/application.properties
+++ b/FlightAppDeploy/src/main/resources/application.properties
@@ -5,6 +5,13 @@ spring.mvc.view.suffix:.jsp
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
+
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
 #
