--- a/FlightAppDeploy/src/main/resources/application.properties
+++ b/FlightAppDeploy/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.mvc.view.prefix:/WEB-INF/jsp/
 spring.mvc.view.suffix:.jsp
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxActive=10
