--- a/FlightAppDeploy/pom.xml
+++ b/FlightAppDeploy/pom.xml
@@ -112,7 +112,15 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
-				</configuration>
+				
+        <archive>
+          <manifest>
+            <addClasspath>true</addClasspath>
+            <classpathPrefix>lib/</classpathPrefix>
+            <mainClass>com.synechron.proc.boot</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
 			</plugin>
 		</plugins>
 	</build>
